# EndToEnd

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.toml  entrypoint.sh  environment.yaml  main.py  prefect.yaml  pyproject.toml  run_backend.ps1  start_backend.sh  stop_backend.sh  windows notes.txt
.devcontainer/: Dockerfile  devcontainer.json  environment.yaml  pyproject.toml
.github/workflows/: run_tests.yaml
.prefect/: flows.json
src/: batch_inference.py  data_classes.py  generate_fake_data.py  model_monitor.py  preprocess.py  realtime_inference.py  test.py  train.py
src/db/: models.py  utils.py
tests/: test_data_shape.py
