[tool.poetry]
name = "endtoend"
version = "0.1.0"
description = ""
authors = ["Rupanshu Janbandhu <arghhjayy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
