[tool.poetry]
name = "endtoend"
version = "0.1.0"
description = ""
authors = ["Rupanshu Janbandhu <arghhjayy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
mlflow = "^2.10.0"
importlib-metadata = "4.10.0"
prefect = "^2.14.18"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
experimental-string-processing = true
line_length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
