[tool.poetry]
name = "endtoend"
version = "0.1.0"
description = ""
authors = ["Rupanshu Janbandhu <arghhjayy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
mlflow = "^2.10.0"
prefect = "^2.14.18"
evidently = "^0.4.15"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pytest = "^8.0.0"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
experimental-string-processing = true
line_length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning", "ignore::DeprecationWarning"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
